@@ -21,6 +21,8 @@
             <input type="hidden" name="user[usr_id]" value="{user.usr_id}" />
             <input type="hidden" name="user[role_id_orig]" value="{user.role_id}" />
             <input type="hidden" name="user[organisation_id_orig]" value="{user.organisation_id}" />
+            <input type="hidden" name="user[username_orig]" value="{user.username_orig}" />
+            <input type="hidden" name="user[email_orig]" value="{user.email_orig}" />
         </fieldset>
 
         <h3 flexy:if="isAdd">{translate(#add user#,#ucfirst#)}</h3>
